[NO_JIRA] Few actions were made: * removed excess imports * removed excess annotations * removed excess tests * removed useless methods * removed useless messages * reduced some warnings * refactored some duplications